# INFT2503

./: README.md
01/: CMakeLists.txt  helloworld.cpp  task_A.cpp  task_B.cpp
01/lecture/: get_line_example.cpp  nullTerminatedStrings.cpp  simple_file.txt  simple_file_reader.cpp  simple_file_writer.cpp  unsafe_raw_table_use.cpp
02/: CMakeLists.txt  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
02/lecture/: arithmetic_on_pointers.cpp  const_pointers.cpp  simple_pointer.cpp
02/task1/: task_a.cpp  task_b.cpp
03/: CMakeLists.txt  string_manipulator.cpp
03/circle/: Circle.h  test_circle.cpp
03/commodity/: Commodity.cpp  Commodity.h  test_commodity.cpp
03/lecture/: Surface.cpp  Surface.h  number_to_string_and_back.cpp  string_to_upper.cpp  surface_main.cpp  surface_test.cpp
04/: CMakeLists.txt  task1.cpp  task2.cpp
04/lecture/: vector_example.cpp
05/: CMakeLists.txt  main.cpp
05/chess/: Piece.cpp  chessboard.cpp  color.cpp  king.cpp  knight.cpp
05/lecture/: unique_pointer.cpp
06/: CMakeLists.txt  Dockerfile  ReadMe.md  task1.cpp  task2.cpp
06/chess/: chessboard.cpp  chessboard_print.cpp  color.cpp  king.cpp  knight.cpp  piece.cpp
06/server/: connection.cpp  server.cpp
07/: CMakeLists.txt
07/task1/: Fraction.cpp  Fraction.h  b).txt  main.cpp
07/task2/: Set.cpp  Set.h  main.cpp
08/: CMakeLists.txt  Pair.cpp  task1.cpp  task2.cpp
09/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
